<resources>
    <string name="app_name">My Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Remember">Remember me</string>
    <string name="setLocationPicture">Set picture</string>
    <string name="getLocationPicture">Get picture</string>
    <string name="fillReq">\"Please fill the field!\"</string>
    <string name="specialChar">\"Must containt the \'@\' character!\"</string>
    <string name="hint_user"> Email</string>
    <string name="hint_pass"> Password</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="denumire">Denumire</string>
    <string name="dev">Dezvoltatori</string>
    <string name="de1">Predescu Eduard</string>
    <string name="de2">Stefan Alexandru</string>
    <string name="de3">Zaharia Alexis</string>
    <string name="contact">Contacteaza-ne</string>
    <string name="mail">travelbuddydevteam@gmail.com</string>
</resources>
