<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:id="@+id/imageView2"
            android:layout_width="180dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/tb_logo" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <TextView
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <TextView
            android:textColor="#000000"
            android:textSize="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/de1"/>

        <TextView
            android:textColor="#000000"
            android:textSize="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/de2"/>

        <TextView
            android:textColor="#000000"
            android:textSize="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/de3"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <TextView
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <TextView
            android:textColor="#000000"
            android:textSize="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>